update travis.yml to include test_class.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install coveralls
   
 script: 
-  - pytest --cov=Api test/
+  - pytest --cov=test_class.py/
 
 after_success : 
 - coveralls
