--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
-language: python
-python:
-  - "3.6.1"
+ language: python
+  python:
+    - "3.6"
+  script:
+    - unittest
 
-before_script:
-  - pip install  -r requirements.txt
+# language: python
+# python:
+#   - "3.6.1"
+
+# before_script:
+#   - pip install  -r requirements.txt
   
-script: 
-  - "python test.py test"
+# script: 
+#   - "python test.py test"
