--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
  language: python
   python:
     - "3.6.1"
+
+  install:
+    - pip install -r requirements.txt
+
+
   script:
-    - "python test.py"
+    - python test.py
