--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "3.6.1"
+notifications:
+  email: false
 # command to install dependencies
 install:
   - pip install -r requirements.txt
