--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ notifications:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 # command to run tests
 script:
-  - pytest test.py # or py.test for Python versions 3.5 and below
+  - pytest --cov=test.py # or py.test for Python versions 3.5 and below
+after_success:
+  - coveralls
