--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - pip install coveralls
 # command to run tests
 script:
-  - pytest --cov=test.py # or py.test for Python versions 3.5 and below
+  - pytest test.py # or py.test for Python versions 3.5 and below
 after_success:
   - coveralls
