--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ notifications:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
 # command to run tests
 script:
-  - pytest test.py # or py.test for Python versions 3.5 and below
+  # - pytest test.py # or py.test for Python versions 3.5 and below
+  - nosetests --with-coverage
 after_success:
   - coveralls
